Add legal footnote to the resume

--- a/resume.tex
+++ b/resume.tex
@@ -116,6 +116,7 @@ I play the guitar and currently am learning to play the piano.
 \begin{center}
   \begin{footnotesize}
     Last updated: \today \\
+      \tiny{I hereby agree to the processing of my personal data included in my job application in the recruitment process (according to the Law of Personal Data Protection from 29 August 1997, Dziennik Ustaw No.133, item 883)}
    % \href{\footerlink}{\texttt{\footerlink}}
   \end{footnotesize}
 \end{center}
